# rt1050_stpmic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
board/: board.c  board.h
devices/MIMXRT1052/gcc/: MIMXRT1052xxxxx_flexspi_nor.ld  MIMXRT1052xxxxx_flexspi_nor_sdram.ld
source/: main.c
